Current version. Buttons almost done.